2000-03-07  Doug Evans  <dje@casey.transmeta.com>

	* reloc.c (reloc_howto_struct): Fix partial_inplace comment.
	* bfd-in2.h: Rebuild.

2000-03-06  Nick Clifton  <nickc@cygnus.com>

	* peicode.h (struct pe_ILF_vars): Add sym_ptr_table and
	sym_ptr_ptr fields.
	(SIZEOF_ILF_SYM_PTR_TABLE): Define.
	(SIZEOF_ILF_STRINGS): Redefine.
	(pe_ILF_make_a_symbol-reloc): New function.  Creates a symbol
	relative reloc, as opposed to a section relative reloc.
	(pe_ILF_make_a_symbol): Set the class of local symbols to C_STAT
	not C_LABEL.
	Add length of symbol's prefix to string pointer.
	Store a pointer to the symbol in the symbol pointer table.
	(pe_ILF_build_a_bfd): Do not build .idata$2 or .idata$7.
	Initialise the symbol pointer table.
	Store the hint in the Hint/Name table.
	Make the jump reloc be symbol realtive, not section relative.
	Create an import symbol for imported code.

2000-03-06  Catherine Moore  <clm@cygnus.com>

	* elf.c (swap_out_syms):  Check for null type_ptr.

2000-03-01  Hans-Peter Nilsson  <hp@axis.com>

	* aout-target.h (MY(write_object_contents)): Remove unused
	and unusable "#if CHOOSE_RELOC_SIZE".
	* pc532-mach.c (MY(write_object_contents)): Ditto.
	* netbsd.h (MY(write_object_contents)): Ditto.
	* hp300hpux.c (MY(write_object_contents)): Ditto.
	* freebsd.h (MY(write_object_contents)): Ditto.
	* aout-tic30.c (tic30_aout_write_object_contents): Ditto.

2000-02-29  H.J. Lu  <hjl@gnu.org>

	* peicode.h (jtab): Make it static.

	* coff-sh.c (sh_align_load_span): Declared if COFF_WITH_PE is
	defined and COFF_IMAGE_WITH_PE is not defined.
	(_bfd_sh_align_load_span): Defined as sh_align_load_span if
	COFF_WITH_PE is defined and COFF_IMAGE_WITH_PE is not defined.

2000-03-01  Nick Clifton  <nickc@cygnus.com>

	* coff-arm.c (bfd_arm_process_before_allocation): Make
	'symndx' signed to prevent compile time warning.

	* coff-mcore.c: Remove unused prototype for pe_object_p.

	* coff-sh.c: Add "#ifndef COFF_IMAGE_WITH_PE" around static